--- a/Game Cana.html
+++ b/Game Cana.html
@@ -1,208 +1,139 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-<meta charset="UTF-8">
-<title>Jogo AgroCBio </title>
 <style>
-  body {
-    background: #87c38f;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    font-family: Arial, sans-serif;
-  }
-  canvas {
-    background: #cce5cc;
-    border: 3px solid #3a5f0b;
-    image-rendering: pixelated;
-  }
-  #hud {
-    margin-bottom: 10px;
-    font-size: 18px;
-    font-weight: bold;
-  }
-  #restartBtn {
-    margin-top: 10px;
-    padding: 8px 16px;
-    background: #3a5f0b;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    font-size: 16px;
-    display: none;
-  }
-  #ranking {
-    margin-top: 15px;
-    font-size: 16px;
-    color: #000;
-    text-align: center;
-  }
+    body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        background-color: #f4f4f4;
+    }
+    .game-container {
+        display: grid;
+        grid-template-columns: repeat(3, 100px);
+        grid-template-rows: repeat(3, 100px);
+        gap: 5px;
+        margin-top: 20px;
+    }
+    .cell {
+        background-color: #fff;
+        border: 2px solid #333;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 60px;
+        font-weight: bold;
+        cursor: pointer;
+        user-select: none;
+    }
+    .status {
+        margin-bottom: 10px;
+        font-size: 20px;
+        font-weight: bold;
+    }
+    .reset-button {
+        padding: 10px 20px;
+        font-size: 16px;
+        cursor: pointer;
+        margin-top: 15px;
+        background-color: #007bff;
+        color: white;
+        border: none;
+        border-radius: 5px;
+    }
 </style>
-</head>
-<body>
-<div id="hud">Pontuação: 0 | Tempo: 0s | Nível: 1</div>
-<canvas id="gameCanvas" width="800" height="400"></canvas>
-<button id="restartBtn">Reiniciar</button>
-<div id="ranking"></div>
+
+<div class="status" id="status">Vez do Jogador X</div>
+<div class="game-container" id="game-container">
+    <div class="cell" data-index="0"></div>
+    <div class="cell" data-index="1"></div>
+    <div class="cell" data-index="2"></div>
+    <div class="cell" data-index="3"></div>
+    <div class="cell" data-index="4"></div>
+    <div class="cell" data-index="5"></div>
+    <div class="cell" data-index="6"></div>
+    <div class="cell" data-index="7"></div>
+    <div class="cell" data-index="8"></div>
+</div>
+<button class="reset-button" onclick="startGame()">Reiniciar Jogo</button>
 
 <script>
-const canvas = document.getElementById("gameCanvas");
-const ctx = canvas.getContext("2d");
-const hud = document.getElementById("hud");
-const restartBtn = document.getElementById("restartBtn");
-const rankingDiv = document.getElementById("ranking");
+    const cells = document.querySelectorAll('.cell');
+    const statusText = document.getElementById('status');
+    let board;
+    let currentPlayer;
+    let isGameActive;
 
-// Configurações
-const gravity = 0.8;
-const jumpForce = -12;
-const playerSpeed = 4;
+    const winningConditions = [
+        [0, 1, 2], [3, 4, 5], [6, 7, 8], // Linhas
+        [0, 3, 6], [1, 4, 7], [2, 5, 8], // Colunas
+        [0, 4, 8], [2, 4, 6]             // Diagonais
+    ];
 
-let score = 0;
-let time = 0;
-let level = 1;
-let obstacleSpeed = 5;
-let gameOver = false;
-let gameStarted = false;
-
-const player = { x: 50, y: 300, width: 20, height: 40, dy: 0, onGround: false };
-let obstacles = [];
-let obstacleTimer = 0;
-let keys = {};
-
-document.addEventListener("keydown", e => {
-  keys[e.key] = true;
-  if (!gameStarted) startGame();
-});
-document.addEventListener("keyup", e => keys[e.key] = false);
-
-function drawBackground() {
-  ctx.fillStyle = "#cce5cc";
-  ctx.fillRect(0, 0, canvas.width, canvas.height);
-  ctx.strokeStyle = "#228B22";
-  for (let i = 0; i < canvas.width; i += 10) {
-    ctx.beginPath();
-    ctx.moveTo(i, 0);
-    ctx.lineTo(i, canvas.height);
-    ctx.stroke();
-  }
-}
-
-function drawPlayer() {
-  ctx.fillStyle = "#8B4513";
-  ctx.fillRect(player.x + 6, player.y + 20, 8, 20);
-  ctx.fillStyle = "#228B22";
-  ctx.fillRect(player.x, player.y, 20, 20);
-}
-
-function drawObstacle(o) {
-  ctx.fillStyle = "#e74c3c";
-  ctx.fillRect(o.x, o.y, o.width, o.height);
-}
-
-function resetGame() {
-  score = 0;
-  time = 0;
-  level = 1;
-  obstacleSpeed = 5;
-  gameOver = false;
-  player.x = 50;
-  player.y = 300;
-  player.dy = 0;
-  obstacles = [];
-  restartBtn.style.display = "none";
-  gameStarted = true;
-  requestAnimationFrame(gameLoop);
-}
-
-function startGame() {
-  gameStarted = true;
-  setInterval(() => { if (!gameOver) time++; }, 1000);
-  requestAnimationFrame(gameLoop);
-}
-
-function updateLevel() {
-  if (score > 5 && level === 1) { level = 2; obstacleSpeed = 6; }
-  if (score > 12 && level === 2) { level = 3; obstacleSpeed = 7; }
-  if (score > 20 && level === 3) { level = 4; obstacleSpeed = 8; }
-}
-
-function saveScore() {
-  let ranking = JSON.parse(localStorage.getItem("ranking")) || [];
-  ranking.push({ score, time });
-  ranking.sort((a,b) => b.score - a.score);
-  ranking = ranking.slice(0, 5);
-  localStorage.setItem("ranking", JSON.stringify(ranking));
-  showRanking();
-}
-
-function showRanking() {
-  let ranking = JSON.parse(localStorage.getItem("ranking")) || [];
-  rankingDiv.innerHTML = "<h3>Ranking:</h3>";
-  ranking.forEach((r, i) => {
-    rankingDiv.innerHTML += `${i+1}. Pontos: ${r.score} | Tempo: ${r.time}s<br>`;
-  });
-}
-
-function gameLoop() {
-  if (gameOver) {
-    ctx.fillStyle = "#000";
-    ctx.font = "30px Arial";
-    ctx.fillText("Game Over!", 300, 200);
-    restartBtn.style.display = "block";
-    saveScore();
-    return;
-  }
-
-  drawBackground();
-
-  if (keys["ArrowLeft"]) player.x -= playerSpeed;
-  if (keys["ArrowRight"]) player.x += playerSpeed;
-  if (keys["ArrowUp"] && player.onGround) {
-    player.dy = jumpForce;
-    player.onGround = false;
-  }
-
-  player.dy += gravity;
-  player.y += player.dy;
-
-  if (player.y + player.height > 350) {
-    player.y = 350 - player.height;
-    player.dy = 0;
-    player.onGround = true;
-  }
-
-  obstacleTimer++;
-  if (obstacleTimer > 100) {
-    obstacles.push({ x: 800, y: 330, width: 30, height: 20 });
-    obstacleTimer = 0;
-  }
-
-  obstacles.forEach((o, i) => {
-    o.x -= obstacleSpeed;
-    drawObstacle(o);
-    if (o.x + o.width < 0) {
-      obstacles.splice(i, 1);
-      score++;
-      updateLevel();
+    function startGame() {
+        board = ['', '', '', '', '', '', '', '', ''];
+        currentPlayer = 'X';
+        isGameActive = true;
+        statusText.textContent = `Vez do Jogador ${currentPlayer}`;
+        cells.forEach(cell => {
+            cell.textContent = '';
+            cell.removeEventListener('click', handleCellClick);
+            cell.addEventListener('click', handleCellClick, { once: true });
+        });
     }
-    if (player.x < o.x + o.width &&
-        player.x + player.width > o.x &&
-        player.y + player.height > o.y) {
-      gameOver = true;
+
+    function handleCellClick(clickedCellEvent) {
+        const clickedCell = clickedCellEvent.target;
+        const clickedCellIndex = parseInt(clickedCell.getAttribute('data-index'));
+
+        if (board[clickedCellIndex] !== '' || !isGameActive) {
+            return;
+        }
+
+        handleMove(clickedCell, clickedCellIndex);
+        checkForWinner();
     }
-  });
 
-  drawPlayer();
-  hud.textContent = `Pontuação: ${score} | Tempo: ${time}s | Nível: ${level}`;
-  requestAnimationFrame(gameLoop);
-}
+    function handleMove(cell, index) {
+        board[index] = currentPlayer;
+        cell.textContent = currentPlayer;
+    }
 
-restartBtn.addEventListener("click", resetGame);
-showRanking();
+    function checkForWinner() {
+        let roundWon = false;
+        for (let i = 0; i < winningConditions.length; i++) {
+            const winCondition = winningConditions[i];
+            let a = board[winCondition[0]];
+            let b = board[winCondition[1]];
+            let c = board[winCondition[2]];
+
+            if (a === '' || b === '' || c === '') {
+                continue;
+            }
+            if (a === b && b === c) {
+                roundWon = true;
+                break;
+            }
+        }
+
+        if (roundWon) {
+            statusText.textContent = `Jogador ${currentPlayer} VENCEU! 🎉`;
+            isGameActive = false;
+            cells.forEach(cell => cell.removeEventListener('click', handleCellClick));
+            return;
+        }
+
+        let roundDraw = !board.includes('');
+        if (roundDraw) {
+            statusText.textContent = `Empate! 🤝`;
+            isGameActive = false;
+            return;
+        }
+
+        // Troca de jogador
+        currentPlayer = currentPlayer === 'X' ? 'O' : 'X';
+        statusText.textContent = `Vez do Jogador ${currentPlayer}`;
+    }
+
+    // Inicia o jogo quando o script é carregado
+    startGame();
 </script>
-</body>
-</html>
-
